@@ -2,8 +2,6 @@ package io.flexwork.security.web.rest;
 
 import io.flexwork.security.service.UserService;
 import io.flexwork.security.service.dto.UserDTO;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -24,15 +22,7 @@ import tech.jhipster.web.util.PaginationUtil;
 public class PublicUserResource {
 
     private static final List<String> ALLOWED_ORDERED_PROPERTIES =
-            Collections.unmodifiableList(
-                    Arrays.asList(
-                            "id",
-                            "login",
-                            "firstName",
-                            "lastName",
-                            "email",
-                            "activated",
-                            "langKey"));
+            List.of("id", "login", "firstName", "lastName", "email", "activated", "langKey");
 
     private static final Logger log = LoggerFactory.getLogger(PublicUserResource.class);
 
