@@ -14,8 +14,6 @@ import jakarta.validation.Valid;
 import jakarta.validation.constraints.Pattern;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import org.slf4j.Logger;
@@ -65,19 +63,18 @@ import tech.jhipster.web.util.ResponseUtil;
 public class UserResource {
 
     private static final List<String> ALLOWED_ORDERED_PROPERTIES =
-            Collections.unmodifiableList(
-                    Arrays.asList(
-                            "id",
-                            "login",
-                            "firstName",
-                            "lastName",
-                            "email",
-                            "activated",
-                            "langKey",
-                            "createdBy",
-                            "createdDate",
-                            "lastModifiedBy",
-                            "lastModifiedDate"));
+            List.of(
+                    "id",
+                    "login",
+                    "firstName",
+                    "lastName",
+                    "email",
+                    "activated",
+                    "langKey",
+                    "createdBy",
+                    "createdDate",
+                    "lastModifiedBy",
+                    "lastModifiedDate");
 
     private static final Logger log = LoggerFactory.getLogger(UserResource.class);
 
